@@ -1,6 +1,8 @@
 DIST XML-Elemental-2.0.tar.gz 7888 RMD160 a4a57afcb4213792ff68007518d3e4a6fffeb503 SHA1 53dc1f554537d61211611c482db2a1ad98541eeb SHA256 69bc7ac57989ad0ff152b6c4ddd9263551afae3bbe2250d5d4573b1c801bc414
 DIST XML-Elemental-2.1.tar.gz 9736 RMD160 6d10e035e19a8e24575e190c99d85b5fae22a362 SHA1 596034728a155171c635e8ee08b1b6de5f45e822 SHA256 37cbd4167809bf6ce6c2ee5fbd8e29ae07df7370cfbed0f71072c0e21666b818
+DIST XML-Elemental-2.11.tar.gz 9826 RMD160 25dc0be0a312d7c7911c180cdc846025c4274a4c SHA1 b00ef0a5ea5ba20dde6aa2cd975db85528dabb45 SHA256 fad1e0746ff43768cfcdef92d6aecd89c287233ebe9be9baa0f3d65e5e7a4987
 EBUILD XML-Elemental-2.0.ebuild 671 RMD160 c40674a009092dc2707df3aeb4fd83599d9330c0 SHA1 95b9ae63a1cff8c2a15d652d83af060f3675ad58 SHA256 a8d338e985a16f397f33a3ec8dc0d496356bc32ae281a674889f5837490202f3
 EBUILD XML-Elemental-2.1.ebuild 605 RMD160 35340bf5e48590b0893f9ded69fca8f0c1fca4dd SHA1 03a1789de0de64edff1ef6f569dd96a0f6c31805 SHA256 0407583047189133cd67f2a5ab242f3ebd3a153ce404148b84ea5d6a3fa8c8e2
-MISC ChangeLog 1972 RMD160 16816c4e1e74eb0754ad3229a06c7a64f9c62776 SHA1 aa28d4a4b3fe5fbf50c448b5c90a679d45b3bd76 SHA256 db83985149f21483a5e2be5c1e89f676a4df040ea3a3425209d9792e7255ffbf
+EBUILD XML-Elemental-2.11.ebuild 609 RMD160 981f2cf44929ef7e6d2b31a934369824ce32abd3 SHA1 501bc110f9700bec4897ec7a36df707c73c0f062 SHA256 8eb79d1040ddce8f96b5042aca1883206d6ac5ed5cc9816bc265b8057d98b9e5
+MISC ChangeLog 2142 RMD160 ee1bb715bc45064a2b391d41c19a3a1e8cdb9e31 SHA1 91eadfd02019745dce0152aae5dbda72bdd021e1 SHA256 4d267fe456ffd9b8d3b8a48256b47a057cb0573c84e6e21e15ac6b768b28aebf
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
