@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/XML-Elemental
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Elemental/ChangeLog,v 1.14 2009/05/30 09:31:31 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Elemental/ChangeLog,v 1.15 2009/11/26 08:01:07 robbat2 Exp $
+
+*XML-Elemental-2.11 (26 Nov 2009)
+
+  26 Nov 2009; Robin H. Johnson <robbat2@gentoo.org>
+  +XML-Elemental-2.11.ebuild:
+  Version bump via perl-bump experimental tool.
 
   30 May 2009; Torsten Veller <tove@gentoo.org> XML-Elemental-2.1.ebuild:
   Remove Task-Weaken dependency and add ~hppa ~ia64 again
